# ppx_effects

./: .gitignore  .ocamlformat-ignore  dune-project  effects_ppx.opam  ppx_effects.opam  rad.ts  readme.md
.github/workflows/: build.yml
.rad/: db.ts  format.ts
lib/ppx/: dune  ppx_effects.ml  test.ml
test/: dune  test.expected.ml  test.ml
test/ppx.ml/: dune  test.expected.ml  test.ml
