(lang dune 2.9)
(generate_opam_files true)
(name ppx_effects)
(version 0.0.1)
(source (github cdaringe/ppx_effects))
(license ISC)
(authors "Christopher Dienringer")
(maintainers "cdaringe@gmail.com")
(package
 (name ppx_effects)
 (synopsis "Ppx for ocaml effects using function implementation")
 (description "Ppx for ocaml effects using function implementation. do not use if your compiler supports first class effects syntax")
 (depends
  (alcotest :with-test)
  (dune (and (> 2.8) :with-test))
  (ocamlformat :with-test)
  (ppx_tools (> 6))
  (ppxlib (>= 0.22.0))
  ; (foo (and :dev (> 1.5) (< 2.0)))
  ; (uri (>= 1.9.0))
  ; (uri (< 2.0.0))
  ; (fieldslib (> v0.12))
  ; (fieldslib (< v0.13)))
  ))