; (test
;  (name test)
;  (libraries ppx_effects)
;  (modules test)
;  (preprocess
;   (pps ppx_effects)))

(executable
 (name pp)
 (modules pp)
 (libraries ppx_effects ppxlib)
 (preprocess
  (pps ppx_effects)))

(rule
 (alias runtest)
 (action
  (diff test.expected.ml test.actual.ml)))

(test
 (name test)
 (modules test)
 (preprocess
  (pps ppx_effects)))
