; (test
;  (name test)
;  (libraries ppx_effects)
;  (modules test)
;  (preprocess
;   (pps ppx_effects)))

(executable
 (name pp)
 (modules pp)
 (libraries ppx_effects ppxlib)
 (preprocess
  (pps ppx_effects)))

;(rule
; (deps pp.exe)
; (target test.actual.ml)
; (mode promote)
; (action
;  (with-stdout-to
;   test.actual.ml
;   (run ./pp.exe "test.ml"))))

(rule
 (alias runtest)
 (action
  (diff test.expected.ml test.actual.ml)))

(test
 (name test)
 (modules test)
 (preprocess
  (pps ppx_effects)))
